# golang/api/openapi.yaml
@@ -329,6 +329,49 @@ paths:
         "500":
           description: Internal error
       summary: register bbox
+  /configs/bhive/associate:
+    post:
+      description: "This connects a bhive with a hive so all telemetry data will be\
+        \ associate with the hive. If the hiveUuid is empty, we disassociate that\
+        \ bhive (it's no longer connected to any hives)"
+      parameters:
+      - description: The UserID is set internally and can not set or be overridden
+          with the API request. Please ignore.
+        example: 1234
+        explode: true
+        in: query
+        name: userId
+        required: false
+        schema:
+          format: int64
+          type: integer
+        style: form
+      - description: The Mac Address of the QBox client.
+        example: 829898a53801
+        explode: true
+        in: query
+        name: bhiveId
+        required: true
+        schema:
+          type: string
+        style: form
+      - description: Unique Identifier for this hive
+        example: 41C0FE2F-EB0C-45B4-8842-C117E47C35E3
+        explode: true
+        in: query
+        name: hiveUuid
+        required: true
+        schema:
+          type: string
+        style: form
+      responses:
+        "200":
+          description: OK if the association / disassociation has been made
+        "400":
+          description: Client error
+        "500":
+          description: Internal error
+      summary: associate bhive (sensors) with a logical hive
   /stands:
     delete:
       description: "This deletes a stand. If a stand is deleted, it will only get\
